--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -1,7 +1,7 @@
 :root {
   --white: #ffffff;
   --black: #1e1e1e;
-  --grey-1: #e2dfdf;		
+  --grey-1: #f4f3f3;		
   --grey-2: #c5c4c4;		
   --grey-3: #959494;		
   --blue-dark: #29295e;
@@ -20,13 +20,10 @@
   --green-dark: #03994e;
   --green-light: #bffbdd;
 }
-
-@font-face { font-family: 'avenir-bold'; src: url('../fonts/avenir-bold.ttf'); }
-@font-face { font-family: 'montserrat'; src: url('../fonts/montserrat.otf'); }
  
-.under-construction  { width: calc(100% - 5px); margin-bottom: 20px; font-size: 22px important!; padding: 20px; background: var(--yellow); color: var(--white);  font-family: 'avenir-bold'; }
+.under-construction  { width: calc(100% - 5px); margin-bottom: 20px; font-size: 22px important!; padding: 20px; background: var(--yellow); color: var(--white); font-weight: 800; }
 
-* { margin: 0; padding: 0; font-family: 'montserrat'; color: var(--black); font-size: 16px; font-weight: normal; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; transition: all 0.2s ease;  }
+* { margin: 0; padding: 0; font-family: 'Montserrat', sans-serif; color: var(--black); font-size: 16px; font-weight: normal; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; transition: all 0.2s ease;  }
 * { -webkit-font-smoothing: subpixel-antialiased; -moz-font-smoothing: subpixel-antialiased; -o-font-smoothing: subpixel-antialiased; }
 *:focus { outline: none; }
 *::-moz-selection { background: var(--yellow); }
@@ -36,21 +33,24 @@
 
 #form_start { position: relative; top: 0; }
 body { background: var(--grey-1); }
-h1 { font-family: 'avenir-bold'; color: var(--blue-dark); font-size: 34px; margin: 10px 0; }
-h2 { font-family: 'avenir-bold'; color: var(--blue-light); padding-bottom: 5px; font-size: 22px; }
-h3 { font-family: 'avenir-bold'; color: var(--blue-dark); padding-bottom: 10px; font-size: 22px; }
+h1 { font-weight: 800; color: var(--blue-dark); font-size: 34px; margin: 10px 0; }
+h2 { font-weight: 800; color: var(--blue-light); padding-bottom: 5px; font-size: 22px; }
+h3 { font-weight: 800; color: var(--blue-dark); padding-bottom: 10px; font-size: 22px; }
 h2:not(:first-of-type) { padding-top: 20px; }
 hr { margin-bottom: 50px; border: 2px solid var(--blue-dark); background: var(--blue-dark); }
 hr.blue-light { background:  var(--blue-light); border: 1px solid  var(--blue-light); margin: 0; margin-bottom: 20px; }
+hr.margin-40 { margin-bottom: 40px; }
 code { font-family: "Lucida Console", "Courier New", monospace; font-size: 14px;}
 .rounded { border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 
-a.link-main:link, a.link-main:visited, a.link-main:active { font-size: 16px; position: relative; overflow: hidden; text-decoration: none; color: var(--black); }
+a.link-main:link, a.link-main:visited, a.link-main:active { font-size: 16px; position: relative; xoverflow: hidden; text-decoration: none; color: var(--black); }
 a.link-main::after { content: ""; background: var(--blue-pale); position: absolute; left: 0; bottom: -2px; width: 100%; height: calc(100% - 8px); z-index: -1; transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05); }
 a.link-main:hover:after { left: 0; bottom: -2px; width: 100%; height: 100%; }
-	  
+	
 a.link-white:link, a.link-white:visited, a.link-white:active { color: var(--white); text-decoration: none; font-size: 16px; font-weight: normal; }
 a.link-white:hover { text-decoration: underline; }
+
+a.link-white.small:link { font-size: 14px; }
 
 .space-20 { height: 20px; width: 100%; }
 .space-30 { height: 30px; width: 100%; }
@@ -88,6 +88,7 @@ select { padding: 0 10px; }
 div.content { line-height: 24px; margin-bottom: 40px; }
 div.content ul { padding-left: 20px; }
 div.content li { line-height: 24px; }
+div.cont { line-height: 24px; }
 div.info { background: var(--blue-pale); padding: 20px; }
 
 /******************************************************************************
@@ -110,7 +111,7 @@ HEADER
 MENÜ
 *****************************************************************************/
 
-.nav-frame { z-index: 1000; position: sticky;  position: -webkit-sticky; top: 0; background: var(--blue-dark); height: 42px; }
+.nav-frame { z-index: 1000; position: sticky;  position: -webkit-sticky; top: -1px; background: var(--blue-dark); height: 42px; }
 .nav-frame .nav { width: 1015px; margin: 0 auto; line-height: 42px; }
 .nav-frame .nav ul { font-size: 0; }
 .nav-frame .nav li { position: relative; display: inline-block; cursor: pointer; height: 40px; margin-right: 30px; color: var(--white); }
@@ -121,8 +122,8 @@ MENÜ
 .nav-frame .nav li:hover .active-menu { background: var(--blue-light); }
 .nav-frame a, a:link, a:visited, a:active { color: var(--white); text-decoration: none; font-size: 16px; }
 .nav-frame .link { color: var(--white); text-decoration: none; font-size: 16px; }
-.nav-frame img.avatar { width: 30px; height: 30px; border-radius: 15px; -moz-border-radius: 15px; -webkit-border-radius: 15px; position: relative; top: 5px; left: -5px; }
-.nav-frame .nav  .user-menu-items { position: absolute; right: 0; background: var(--blue-medium); width: 200px; sborder-top: 5px solid var(--blue-light); top: 42px; overflow: hidden; 
+.nav-frame img.avatar { width: 30px; height: 30px; border-radius: 15px; -moz-border-radius: 15px; -webkit-border-radius: 15px; position: relative; top: 6px; left: -5px; }
+.nav-frame .nav  .user-menu-items { position: absolute; right: 0; background: var(--blue-medium); width: 200px; top: 42px; overflow: hidden; 
 	border-bottom-left-radius: 5px; -moz-border-bottom-left-radius: 5px;  -webkit-border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; -moz-border-bottom-right-radius: 5px;  -webkit-border-bottom-right-radius: 5px;
 	transition:max-height 0.3s ease-out; height:auto; max-height:600px; }
 .nav-frame .nav .user-menu-items .border { height: 5px; background: var(--blue-light); }
@@ -147,7 +148,7 @@ FOOTER
 .footer-frame .top { background: var(--blue-dark); overflow: auto; overflow-x: hidden; padding: 30px 0 40px 0; margin-top: 60px; color: var(--white); }
 .footer-frame .top div { color: var(--white); margin: 0 auto; width: 400px; padding: 10px 0; }
 .footer-frame .top div .left { width: 200px; float: left; text-align: right; border-right: 1px solid var(--white); padding-right: 20px; }
-.footer-frame .top div .right { width: 200px; float: left; padding-left: 20px; }
+.footer-frame .top div .right { width: 200px; float: left; padding-left: 20px; font-size: 14px; }
 .footer-frame .bottom { padding: 20px 0; background: var(--blue-light); font-size: 14px; }
 .footer-frame .bottom > div { width: 1015px; margin: 0 auto; overflow: auto; position: relative;}
 .footer-frame .bottom a { font-size: 14px; padding-left: 10px; }
@@ -158,16 +159,6 @@ FOOTER
 /******************************************************************************
 MESSAGES
 ******************************************************************************/
-/*
-.message-error { background: var(--red); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
-.message-error div { color: var(--white); }
-
-.message-warning { background: var(--yellow); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
-.message-warning div { color: var(--white); }
-
-.message-success { background: var(--green); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
-.message-success div { color: var(--white); }
-*/
 
 .message-error { background: #fcd2e2; padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-error div { color: var(--red); }
@@ -180,6 +171,12 @@ MESSAGES
 
 .message-warning-dark { background: var(--yellow); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
 .message-warning-dark div { color: var(--white); }
+
+.message-error-dark { background: var(--red); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
+.message-error-dark div { color: var(--white); }
+
+.message-success-dark { background: var(--green); padding: 20px; margin-bottom: 20px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
+.message-success-dark div { color: var(--white); }
 
 /********************************************************************************
 MEDIA
