--- a/public_html/css/search.css
+++ b/public_html/css/search.css
@@ -1,23 +1,14 @@
 .search-frame > div { margin-bottom: 30px;}
-.search-frame .category { margin-bottom: 20px; }
-.search-frame .category h2 { font-size: 22px; padding: 0; margin: 0; }
-.search-frame .category h2:hover { color: var(--blue-dark); }
-.search-frame .category hr { background:  var(--blue-light); border: 1px solid  var(--blue-light); margin: 0; }
-.search-frame .category:hover hr { background: var(--blue-dark); border: 1px solid  var(--blue-dark); }
+.search-frame .category-group { overflow: hidden; background: var(--grey-2); }
+.search-frame .category { margin-bottom: 20px; background: var(--blue-dark); }
+.search-frame .category h2 { font-size: 22px; padding: 10px 20px; margin: 0; color: var(--white); }
+.search-frame .category:hover { background: var(--blue-dark-dark); }
 .search-frame .category a:link, a:visited, a:active { text-decoration: none; }
-.search-frame .subject { margin-left: 40px; }
-.search-frame .subject .cloud { margin: 0 10px 10px 0; background: var(--white); display: inline-block; overflow: hidden; }
+.search-frame .subject { display: flex; flex-wrap: wrap; margin: 0 15px 20px 15px; }
+.search-frame .subject .cloud { display: flex; background: var(--white); overflow: hidden; margin: 5px; }
+.search-frame .subject .cloud div:first-child { padding: 10px 0; }
 .search-frame .subject .cloud:hover { background: var(--yellow); }
-.search-frame .subject .cloud:hover .number { background: var(--grey-3); }
-.search-frame .subject h3 { display: inline-block; float: left; padding: 0 10px; line-height: 34px; }
-.search-frame .subject .number {background: var(--grey-2); color: var(--white); float: left; width: 28px; height: 100%; margin-left: 10px; display: inline-block; 
-		text-align: center; font-size: 14px; line-height: 34px;   }
-
-/**************************************
-MAX 960
-**************************************/
-@media (max-width: 960px) { 
-	.search-frame .subject { margin-left: 0; }
-}
-
+.search-frame .subject .cloud:hover .number { background: var(--blue-dark); }
+.search-frame .subject h3 { display: inline-block; float: left; padding: 0 10px; font-size: 18px; }
+.search-frame .subject .number { background: var(--grey-3); color: var(--white); float: left; width: 36px; min-width: 36px; margin-left: 10px; text-align: center; font-size: 18px; padding-top: 10px; }
 
